--- a/src/main/resources/templates/changenotices/changenotice-info.html
+++ b/src/main/resources/templates/changenotices/changenotice-info.html
@@ -23,7 +23,7 @@
 
         <br>
 
-        <h3 th:text="#{changeNoticeDirectory}">Change notice Directory</h3>
+        <h3 class="font-weight-bold text-secondary" th:text="#{index.section.changenotices}">Change notices</h3>
 
         <hr>
 
