--- a/src/main/resources/templates/users/user-change-password-form.html
+++ b/src/main/resources/templates/users/user-change-password-form.html
@@ -25,15 +25,19 @@
 
 <div class="container">
     <br><br>
-    <h1 class="offset-3 px-3" th:text="#{changePassword}">Change Password</h1>
-    <br />
+
+    <h3 class="font-weight-bold text-secondary" th:text="#{users}">Users</h3>
+
+    <hr>
+
+    <p class="h4 font-weight-bolder font-italic mb-4 offset-sm-4" th:text="#{changePasswordForUser}">User Card</p>
 
     <form th:action="@{'/users/changePasswordForUser/' + ${email}}" action="#" method="post" class="form-horizontal">
         <div th:if="${notMatches}" th:text="#{notMatches}" class="alert alert-danger col-sm-5 offset-3 text-center">Passwords do not match</div>
 
-        <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{password} + ':'" class="pull-right">Password:</h6>
+        <div class="row mb-1">
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{password} + ':'">Password:</h6>
             </div>
             <div class="col-sm-5">
                 <input id="password" type="password" name="password" class="form-control" th:placeholder="#{password}"/>
@@ -41,21 +45,16 @@
         </div>
 
         <div class="row mb-3">
-            <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                <h6 th:text="#{passwordConfirmation} + ':'" class="pull-right">Password confirmation:</h6>
+            <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                <h6 class="font-weight-bold pull-right" th:text="#{passwordConfirmation} + ':'">Password confirmation:</h6>
             </div>
             <div class="col-sm-5">
                 <input id="passwordConfirmation" type="password" name="passwordConfirmation" class="form-control" th:placeholder="#{passwordConfirmation}"/>
             </div>
         </div>
-
-
-
-
-
 <!--        <input id="id" type="hidden" name="id" th:value="${id}" />-->
         <div class="row">
-            <button type="submit" class="btn-sm btn-primary offset-6" th:text="#{changePassword}">Change password</button>
+            <button type="submit" class="btn-sm btn-primary offset-8" th:text="#{update}">Change password</button>
         </div>
     </form>
 
