--- a/src/main/resources/templates/companies/company-form.html
+++ b/src/main/resources/templates/companies/company-form.html
@@ -31,8 +31,8 @@
 
         <form class="form-horizontal" th:object="${company}" th:action="@{/companies/save}" method="post">
 
-            <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
-                <p th:text="#{pleaseCorrectValues}">Error Message</p>
+            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger h5 col-sm-6 offset-sm-3 text-center">
+                <p class="m-1" th:text="#{pleaseCorrectValues}">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
