--- a/src/main/resources/templates/users/user-form.html
+++ b/src/main/resources/templates/users/user-form.html
@@ -33,8 +33,8 @@
 
         <form class="form-horizontal" th:object="${user}" th:action="@{/users/save}" method="post">
 
-            <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
-                <p th:text="#{pleaseCorrectValues}">Error Message</p>
+            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger h5 col-sm-6 offset-sm-3 text-center">
+                <p class="m-1" th:text="#{pleaseCorrectValues}">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-1">
                 <div class="col-sm-3 form-control-plaintext offset-sm-1">
                     <h6 class="font-weight-bold pull-right" th:text="#{password} + ':'">Password:</h6>
                 </div>
