Add i18n to error messages on loginPage.html

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -21,15 +21,15 @@
 <body>
     <div class="container">
         <br><br>
-        <h1 class="offset-3 px-3" th:text="#{changePassword}">Change Password</h1>
+        <h1 class="font-italic offset-4" th:text="#{changePasswordFull}">Change Password</h1>
         <br />
 
         <form th:action="@{/users/savePassword}" action="#" method="post" class="form-horizontal">
             <div th:if="${notMatches}" th:text="#{notMatches}" class="alert alert-danger col-sm-5 offset-3 text-center">Passwords do not match</div>
 
             <div class="row mb-3">
-                <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6 th:text="#{password} + ':'" class="pull-right">Password:</h6>
+                <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                    <h6 class="font-weight-bold pull-right" th:text="#{password} + ':'">Password:</h6>
                 </div>
                 <div class="col-sm-5">
                     <input id="password" type="password" name="password" class="form-control" th:placeholder="#{password}"/>
@@ -37,8 +37,8 @@
             </div>
 
             <div class="row mb-3">
-                <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6 th:text="#{passwordConfirmation} + ':'" class="pull-right">Password confirmation:</h6>
+                <div class="col-sm-3 form-control-plaintext offset-sm-1">
+                    <h6 class="font-weight-bold pull-right" th:text="#{passwordConfirmation} + ':'">Password confirmation:</h6>
                 </div>
                 <div class="col-sm-5">
                     <input id="passwordConfirmation" type="password" name="passwordConfirmation" class="form-control" th:placeholder="#{passwordConfirmation}"/>
@@ -47,11 +47,21 @@
 
             <input id="token" type="hidden" name="token" th:value="${token}" />
             <div class="row">
-                <button type="submit" class="btn-sm btn-primary offset-6" th:text="#{changePassword}">Change password</button>
+                <button type="submit" class="btn-sm btn-primary offset-8" th:text="#{update}">Update</button>
             </div>
         </form>
 
-        <br /> <a class="btn-sm btn-primary offset-6" th:href="@{/login}" th:text="#{signIn}">Sign In</a>
+        <br>
+
+        <div class="row">
+            <div class="col-sm-4">
+
+            </div>
+            <div class="col-sm-5">
+                <a class="btn btn-primary pull-right" th:href="@{/login}" th:text="#{signIn}">Sign In</a>
+            </div>
+        </div>
+
     </div>
 
     <script type="text/javascript">
