--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -16,13 +16,13 @@
 <body>
 	<div class="container">
 		<br><br>
-		<h1 class="offset-3 px-3" th:text="#{resetPassword}">Reset Password</h1>
+		<h1 class="font-italic offset-3 px-5" th:text="#{resetPassword}">Reset Password</h1>
 		<br />
 		<div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger">Error Message</div>
 
 		<form th:action="@{/users/resetPassword}" method="post" class="form-horizontal">
 			<div class="row">
-				<label class="col-sm-1 h5 offset-2" for="email">Email:</label>
+				<label class="col-sm-1 h5 offset-2 p-1" for="email">Email:</label>
 				<span class="col-sm-5">
 					<input class="form-control" id="email" name="email" type="email" th:placeholder="#{email}"/>
 				</span>
