--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -22,7 +22,12 @@
     <h1 class="offset-3 px-3" th:text="#{loginPage}">Login page</h1>
     <br>
 
-    <div th:if="${param.error}" class="alert alert-danger col-sm-5 offset-3 text-center" th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}">Login error message</div>
+    <div th:if="${param.error}">
+        <div th:switch="${session.SPRING_SECURITY_LAST_EXCEPTION.message}">
+            <p class="alert alert-danger col-sm-5 offset-3 text-center" th:case="'Bad credentials'" th:text="#{badCredentials}"></p>
+            <p class="alert alert-danger col-sm-5 offset-3 text-center" th:case="'User account is locked'" th:text="#{accountLocked}"/>
+        </div>
+    </div>
     <div th:if="${emailSent}" th:text="#{emailSent}" class="alert alert-success col-sm-5 offset-3 text-center">Email Sent</div>
     <div th:if="${notRegistered}" th:text="#{notRegistered}" class="alert alert-danger col-sm-5 offset-3 text-center">Not registered</div>
     <div th:if="${errorMessage}" th:text="${errorMessage}" class="alert alert-danger col-sm-5 offset-3 text-center">Error message</div>
