--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -29,13 +29,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#" th:href="@{/documents/list}" th:text="#{documents}">Documents <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#" th:href="@{/departments/list}" th:text="#{index.section.departments}">Departments</a>
                 <a class="nav-item nav-link" href="#" th:href="@{/changenotices/list}" th:text="#{changeNotices}">Changes</a>
                 <a class="nav-item nav-link" href="#" th:href="@{/externaldispatches/list}" th:text="#{externalDispatches}">Externals</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/companies/list}" th:text="#{index.section.companies}">Companies</a>
                 <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list}" th:text="#{internalDispatches}">Internals</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/departments/list}" th:text="#{index.section.departments}">Departments</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/companies/list}" th:text="#{index.section.companies}">Companies</a>
                 <a class="nav-item nav-link" href="#" th:href="@{/internaldispatches/list/albums}" th:text="#{index.section.copiesArchive}">Albums</a>
-                <a class="nav-item nav-link" href="#" th:href="@{/users/list}" th:text="#{users}">Users</a>
+                <a class="nav-item nav-link" href="#" th:href="@{/users/list}" th:text="#{users}" sec:authorize="hasRole('ROLE_ADMIN')">Users</a>
             </div>
         </div>
 
