--- a/src/main/resources/templates/users/user-info.html
+++ b/src/main/resources/templates/users/user-info.html
@@ -81,7 +81,7 @@
                     <h6 class="font-weight-bold pull-right m-1" th:text="#{role} + ':'">Role:</h6>
                 </div>
                 <div class="col-sm-3 border bg-light">
-                    <h6 class="m-1" th:text="*{role}"></h6>
+                    <h6 class="m-1" th:text="#{'role.' + *{role}}"></h6>
                 </div>
             </div>
 
