--- a/src/main/resources/templates/users/user-list.html
+++ b/src/main/resources/templates/users/user-list.html
@@ -58,7 +58,7 @@
                 <td class="align-middle text-center" th:text="${tempUser.department.name}"></td>
                 <td class="align-middle text-center" th:text="${#temporals.format(tempUser.created, 'dd-MM-yyyy HH:mm:ss')}"></td>
                 <td class="align-middle text-center" th:text="#{${tempUser.nonLocked ? 'nonBanned' : 'banned'}}"></td>
-                <td class="align-middle text-center" th:text="${tempUser.role}"></td>
+                <td class="align-middle text-center" th:text="#{'role.' + ${tempUser.role}}"></td>
             </tr>
             </tbody>
         </table>
