--- a/src/main/resources/templates/changenotices/changenotice-info.html
+++ b/src/main/resources/templates/changenotices/changenotice-info.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col-sm-4">
                 <a class="btn btn-sm btn-success mr-2"
-                   th:href="@{'/electronicImageChangeNotices/showFile/' + ${changeNotice.id} + '/' + ${changeNotice.electronicImageChangeNotice.id}}" th:target="_blank"><i class="fa fa-binoculars"></i></a>
+                   th:href="@{'/electronicImageChangeNotices/showFile/' + ${changeNotice.id}}" th:target="_blank"><i class="fa fa-binoculars"></i></a>
 
                 <a class="btn btn-sm btn-danger"
                    th:href="@{'/electronicImageChangeNotices/delete/' + ${changeNotice.id} + '/' + ${changeNotice.electronicImageChangeNotice.id}}" onclick="if (!(confirm('Are you sure?'))) return false"><i class="fa fa-times"></i></a>
